--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
     "require": {
         "php": "^7.2",
         "doctrine/dbal": "^2.10",
+        "erusev/parsedown": "^1.7",
         "fideloper/proxy": "^4.0",
+        "kaishiyoku/laravel-html-purifier": "^2.0",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0"
     },
